# s21_3DViewer

./: README.md  README_RUS.md
src/: Doxyfile  Makefile
src/3D_Viewer/: CMakeLists.txt  controller.cc  controller.h  display.cc  display.h  interactions.cc  interactions.h  interactions.ui  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  preferences.cc  preferences.h  preferences.ui
src/3D_Viewer/gifimage/: qgifimage.cpp
src/Backend/matrix/: Makefile  s21_matrix_help.cc  s21_matrix_methods.cc  s21_matrix_oop.h  s21_matrix_operations.cc  s21_matrix_operators.cc
src/Backend/matrix/tests/: s21_matrix_test.cpp  s21_matrix_test.hpp  s21_methods.cpp  s21_operations_test.cpp  s21_operators_test.cpp
src/Backend/model/: s21_builder.cc  s21_builder.h  s21_model.cc  s21_model.h  s21_observer.h
src/Backend/model/model_tests/: model_test.cc  test.h
src/Backend/model/model_tests/examples_for_tests/: error.txt  nenormal.txt
